--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" defer></script>
 </head>
-<body>
+<body class="darkmode">
     <div class="container">
         <header>
             <div class="logo">
@@ -37,6 +37,29 @@
                 </div>
                 <div class="char-count">
                     Approx. reading time 1min
+                </div>
+                <div class="tiles">
+                    <div class="char tile">
+                        <div class="stat">
+                            <div class="number">344</div>
+                            <div class="desc">sentence</div>
+                        </div>
+                        <img src="./assets/images/pattern-character-count.svg" alt="">
+                    </div>
+                    <div class="word-count tile">
+                        <div class="stat">
+                            <div class="number"></div>
+                            <div class="desc"></div>
+                        </div>
+                        <img src="./assets/images/pattern-word-count.svg" alt="">
+                    </div>
+                    <div class="sentence-count tile">
+                        <div class="stat">
+                            <div class="number">455</div>
+                            <div class="desc">sentence</div>
+                        </div>
+                        <img src="./assets/images/pattern-sentence-count.svg" alt="">
+                    </div>
                 </div>
             </div>
     </div>
