Added progress bars to the page

--- a/index.html
+++ b/index.html
@@ -41,25 +41,119 @@
                 <div class="tiles">
                     <div class="char tile">
                         <div class="stat">
-                            <div class="number">344</div>
-                            <div class="desc">sentence</div>
+                            <h2 class="number">344</h2>
+                            <p class="desc">Total Characters</p>
                         </div>
                         <img src="./assets/images/pattern-character-count.svg" alt="">
                     </div>
                     <div class="word-count tile">
                         <div class="stat">
-                            <div class="number"></div>
-                            <div class="desc"></div>
+                            <h2 class="number">600</h2>
+                            <p class="desc">Word Count</pp>
                         </div>
                         <img src="./assets/images/pattern-word-count.svg" alt="">
                     </div>
                     <div class="sentence-count tile">
                         <div class="stat">
-                            <div class="number">455</div>
-                            <div class="desc">sentence</div>
+                            <h2 class="number">455</h2>
+                            <p class="desc">Sentence count</p>
                         </div>
                         <img src="./assets/images/pattern-sentence-count.svg" alt="">
                     </div>
+                </div>
+            </div>
+
+            <h3 class="progress-bar-title">Letter Density</h3>
+            <div class="progress-bar-container">
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
+                </div>
+                <div class="progress-bar">
+                    <p class="letter">M</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-M"></div>
+                        <div class="bar-faint "></div>
+
+                    </div>
+                    <p class="percentage">20%</p>
                 </div>
             </div>
     </div>
