Added styles to progress bars

--- a/index.html
+++ b/index.html
@@ -66,96 +66,48 @@
             <h3 class="progress-bar-title">Letter Density</h3>
             <div class="progress-bar-container">
                 <div class="progress-bar">
-                    <p class="letter">M</p>
+                    <p>E</p>
                     <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
-
+                        <div class="bar-visible letter-E"></div>
                     </div>
-                    <p class="percentage">20%</p>
+                    <p class="percentage">40(16.06%)</p>
                 </div>
 
                 <div class="progress-bar">
-                    <p class="letter">M</p>
+                    <p>I</p>
                     <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
+                        <div class="bar-visible letter-I"></div>
 
                     </div>
-                    <p class="percentage">20%</p>
+                    <p class="percentage">29(11.65%)</p>
                 </div>
                 <div class="progress-bar">
-                    <p class="letter">M</p>
+                    <p>T</p>
                     <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
+                        <div class="bar-visible letter-T"></div>
+                    </div>
+                    <p class="percentage">28(11.24%)</p>
+                </div>
+                <div class="progress-bar">
+                    <p>O</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-O"></div>                    </div>
+                    <p class="percentage">22(8.84%)</p>
+                </div>
+                <div class="progress-bar">
+                    <p>N</p>
+                    <div class="progress">
+                        <div class="bar-visible letter-N"></div>
+                    </div>
+                    <div class="percentage">21(8.43%)</div>
+                </div>
+    </div>
+    <div class="toggle-overflow">
+        <p class="">See More </p>
+        <img src="./assets/images/down-arrow.svg" alt="down arrow">
 
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-                <div class="progress-bar">
-                    <p class="letter">M</p>
-                    <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-                <div class="progress-bar">
-                    <p class="letter">M</p>
-                    <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
 
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-                <div class="progress-bar">
-                    <p class="letter">M</p>
-                    <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
-
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-                <div class="progress-bar">
-                    <p class="letter">M</p>
-                    <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
-
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-                <div class="progress-bar">
-                    <p class="letter">M</p>
-                    <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
-
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-                <div class="progress-bar">
-                    <p class="letter">M</p>
-                    <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
-
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-                <div class="progress-bar">
-                    <p class="letter">M</p>
-                    <div class="progress">
-                        <div class="bar-visible letter-M"></div>
-                        <div class="bar-faint "></div>
-
-                    </div>
-                    <p class="percentage">20%</p>
-                </div>
-            </div>
+    </div>
     </div>
 </body>
 </html>
