Fixed progress bar arrangement

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h3 class="progress-bar-title">Letter Density</h3>
             <div class="progress-bar-container">
                 <div class="progress-bar">
-                    <p>E</p>
+                    <div class="letter">E</div>
                     <div class="progress">
                         <div class="bar-visible letter-E"></div>
                     </div>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="progress-bar">
-                    <p>I</p>
+                    <div class="letter">I</div>
                     <div class="progress">
                         <div class="bar-visible letter-I"></div>
 
@@ -79,20 +79,20 @@
                     <p class="percentage">29(11.65%)</p>
                 </div>
                 <div class="progress-bar">
-                    <p>T</p>
+                    <div class="letter">T</div>
                     <div class="progress">
                         <div class="bar-visible letter-T"></div>
                     </div>
                     <p class="percentage">28(11.24%)</p>
                 </div>
                 <div class="progress-bar">
-                    <p>O</p>
+                    <div class="letter">O</div>
                     <div class="progress">
                         <div class="bar-visible letter-O"></div>                    </div>
                     <p class="percentage">22(8.84%)</p>
                 </div>
                 <div class="progress-bar">
-                    <p>N</p>
+                    <div class="letter">N</div>
                     <div class="progress">
                         <div class="bar-visible letter-N"></div>
                     </div>
