--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <label for="char-limit">Set Character Limit</label>
                         </div>
                         <div class="char-count">
-                        Approx. reading time 1min
+                        Approx. reading time &lt1min
                         </div>
                 </div>
                
