--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Character Counter</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" defer></script>
@@ -26,11 +27,11 @@
             <div class="input-container">
                 <textarea id="text-input" placeholder="Type or paste your text here..."></textarea>
                 <div class="input-wrapper">
-                        <div>  
+                        <div class="checkbox-wrapper">  
                             <input type="checkbox" id="spaces">
                             <label for="spaces">Exclude Spaces</label>
                         </div>
-                        <div>
+                        <div class="checkbox-wrapper">
                             <input type="checkbox" name="char-limit" id="char-limit">
                             <label for="char-limit">Set Character Limit</label>
                         </div>
