--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <h3 class="progress-bar-title">Letter Density</h3>
-            <div class="progress-bar-container">
+            <div class="progress-bar-container letter-density">
                 <div class="progress-bar">
                     <div class="letter">E</div>
                     <div class="progress">
