Added toggleOverflow function to script.js

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <div class="char-count">
-                        Approx. reading time &lt<span class="reading-time"></span>
+                        Approx. reading time &lt <span class="reading-time"></span>
                         </div>
                 </div>
                
@@ -74,9 +74,14 @@
             <div class="progress-bar-container letter-density"> 
             </div>
     <div class="toggle-overflow">
-        <p class="toggle-overflow-text">See More </p>
-        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"/ aria-label="down arrow"></svg>
-    </div>
+        <div class="see-more">
+            <p class="toggle-overflow-text">See More </p>
+            <svg class="down-arrow" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"/ aria-label="down arrow"></svg>
+        </div>
+        <div class="see-less">
+            <p class="toggle-overflow-text">See Less </p>
+            <svg class="up-arrow" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M480-528 296-344l-56-56 240-240 240 240-56 56-184-184Z"/></svg>
+        </div>
     </div>
 </body>
 </html>
